Update RADON description

--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,18 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">RADON H2020</h4>
-                        <p class="card-text text-justify small">RADON offers an advanced DevOps framework to help the European software industry to adopt serverless FaaS technology, while avoiding lock-in within a specific FaaS provider. The RADON framework consists of an integrated methodology and an open source toolchain, to define, evolve, and operate event-centric applications that consume serverless functions, allowing a high-degree of reuse and automation of functions, services and associated data pipelines. </p>
+                        <p class="card-text text-justify small">RADON aims at creating a DevOps framework to create and
+                            manage microservices-based applications that can optimally exploit serverless
+                            computing technologies. These applications will include fine-grained and independently
+                            deployable microservices that can efficiently exploit FaaS and container technologies.
+                            The RADON framework will consist of an integrated methodology and an open source toolchain,
+                            to define, evolve, and operate event-centric applications that consume serverless functions,
+                            allowing a high-degree of reuse and automation of functions, services and associated data
+                            pipelines.
+                            The end goal is to broaden the adoption of serverless computing technologies within the
+                            European software industry. The methodology will strive to tackle complexity, harmonize the
+                            abstraction and actuation of action-trigger rules, avoid FaaS lock-in, and optimize
+                            decomposition and reuse through model-based FaaS-enabled development and orchestration. </p>
                         <p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
@@ -140,8 +151,14 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">AnsibleMetrics</h4>
-                        <p class="card-text text-justify small">AnsibleMetrics is a Python-based static source code measurement tool to characterize Infrastructure-as-Code. It analyzes Ansible projects, but it could be easily extended to support additional formats. AnsibleMetrics represents a step forward towards software quality support for DevOps engineers developing and maintaining infrastructure code. It is released under the Apache 2.0 license.</p>
-                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-ansible-metrics" target="_blank">Source Code</a> - <a href="https://radon-h2020.github.io/radon-ansible-metrics">Documentation</a>
+                        <p class="card-text text-justify small">AnsibleMetrics is a Python-based static source code
+                            measurement tool to characterize Infrastructure-as-Code. It analyzes Ansible projects, but
+                            it could be easily extended to support additional formats. AnsibleMetrics represents a step
+                            forward towards software quality support for DevOps engineers developing and maintaining
+                            infrastructure code. It is released under the Apache 2.0 license.</p>
+                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-ansible-metrics"
+                                target="_blank">Source Code</a> - <a
+                                href="https://radon-h2020.github.io/radon-ansible-metrics">Documentation</a>
                         </p>
                     </div>
                 </div>
@@ -152,7 +169,8 @@
                         <p class="card-text text-justify small">SoCRATES is an IntelliJ IDEA plugin to detect test
                             smells in Scala/SBT projects. It automatically detects and reports on six test smells
                             including four variants of General Fixture. It is released under the MIT license.</p>
-                        <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Source Code</a>
+                        <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Source
+                                Code</a>
                         </p>
                     </div>
                 </div>
@@ -197,8 +215,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Gnome Maps</h4>
                         <p class="card-text text-justify small">Gnome Maps is a map application for GNOME.
-                            <p class="card-text"><a href="https://wiki.gnome.org/Apps/Maps" target="_blank">Web Site</a>
-                            </p>
+                        <p class="card-text"><a href="https://wiki.gnome.org/Apps/Maps" target="_blank">Web Site</a>
+                        </p>
                     </div>
                 </div>
 
@@ -209,7 +227,7 @@
                             for routing on graphs. E.g. Dijkstra and A* but also optimized road routing algorithms like
                             Contraction Hierarchies. It stands under the Apache License and is build on a large test
                             suite.
-                            <p class="card-text"><a href="https://graphhopper.com" target="_blank">Web Site</a></p>
+                        <p class="card-text"><a href="https://graphhopper.com" target="_blank">Web Site</a></p>
                     </div>
                 </div>
 
