Add mobilesoft PC

--- a/index.html
+++ b/index.html
@@ -114,10 +114,8 @@
                                 maintenance and evolution</b> and <b>software testing</b>, where I apply <b>machine
                                 learning</b>, <b>search-based
                                 algorithms</b>, and <b>mining of software repositories</b>.<br />
-                            I serve and served as a program committee member of international conferences
-                            (e.g., ESEC/FSE, ICSME, SANER, ICPC), and as a referee for various international journals in
-                            the field of software engineering (e.g., TSE, TOSEM, EMSE, JSS) and artificial intelligence
-                            (e.g., TKDE, Neurocomputing).<br />
+                            I serve and served as a program committee member of international conferences, and as a referee for various international journals in
+                            the field of software engineering and artificial intelligence.<br />
                             You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
                 </div>
