--- a/services.html
+++ b/services.html
@@ -121,7 +121,8 @@
                         <p class="card-text text-justify small">
                             Guest Editor for Science of Computer Programming (SCICO) for a <a
                                 href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-papers/special-issue-on-software-health-of-software-ecosystems"
-                                target="blank">Special Issue on "Software Health of Software Ecosystems"</a>: 2020 - Actual<br />
+                                target="blank">Special Issue on "Software Health of Software Ecosystems"</a>: 2020 -
+                            Actual<br />
                             IEEE Software - Initiatives Team: 2020 - Actual<br />
                             IEEE Software Blog: 2019 - Actual
                         </p>
@@ -132,6 +133,10 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
+                            &emsp;2021 (Tool Demo Track)<br />
+                            &emsp;2019 (Tool Demo Track)<br />
+                            &emsp;2018 (Tool Demo Track)<br />
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems
                             (MOBILESoft):<br />
                             &emsp;2021 (Technical Papers Track)<br />
@@ -155,9 +160,6 @@
                             &emsp;2020 (Research Track)<br />
                             Euromicro Conference on Software Engineering and Advanced Applications (SEAA):<br />
                             &emsp;2020 (Journal First Track)<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
-                            &emsp;2019 (Tool Demo Track)<br />
-                            &emsp;2018 (Tool Demo Track)<br />
                             International Workshop on Software Health (SoHeal): 2021<br />
                             International Workshop on Machine Learning Techniques for Software Quality Evaluation
                             (MaLTeSQuE): 2020 2019 2018<br />
@@ -193,11 +195,11 @@
                     <div class="card-body">
                         <h4 class="card-title">Reviewer for International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE International Conference on Program Comprehension (ICPC): 2021, 2019, 2018, 2016<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research
                             Track), 2018 (Research Track), 2016 (Early Research Achievement Track)<br />
                             International Conference on Evaluation and Assessment in Software Engineering (EASE):
                             2020<br />
-                            IEEE International Conference on Program Comprehension (ICPC): 2019, 2018, 2016<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER): 2018, 2017<br />
                             International Conference on Business Information Systems (BIS): 2017, 2016, 2015<br />
@@ -211,6 +213,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical
+                            University Eindhoven, The Netherlands, December 10th, 2020<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
                             Summer School on Internet of Things, University of Salerno, Fisciano, Italy, June 3rd
                             2020<br />
