Add some duties

--- a/services.html
+++ b/services.html
@@ -119,9 +119,10 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
-                            Guest Editor for Science of Computer Programming (SCICO) for a <a
+                            Journal of Systems and Software - Elsevier: 2021 - Actual<br />
+                            Guest Editor for Science of Computer Programming - Elsevier for the <a
                                 href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-papers/special-issue-on-software-health-of-software-ecosystems"
-                                target="blank">Special Issue on "Software Health of Software Ecosystems"</a>: 2020 -
+                                target="blank">special issue on "Software Health of Software Ecosystems"</a>: 2020 -
                             Actual<br />
                             IEEE Software - Initiatives Team: 2020 - Actual<br />
                             IEEE Software Blog: 2019 - Actual
@@ -133,6 +134,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE/ACM International Conference on Software Engineering (ICSE):<br />
+                            &emsp;2022 (Student Research Competition)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
                             &emsp;2021 (Tool Demo Track)<br />
                             &emsp;2019 (Tool Demo Track)<br />
@@ -160,9 +163,9 @@
                             &emsp;2020 (Research Track)<br />
                             Euromicro Conference on Software Engineering and Advanced Applications (SEAA):<br />
                             &emsp;2020 (Journal First Track)<br />
-                            International Workshop on Software Health (SoHeal): 2021<br />
                             International Workshop on Machine Learning Techniques for Software Quality Evaluation
-                            (MaLTeSQuE): 2020 2019 2018<br />
+                            (MaLTeSQuE): 2021 2020 2019 2018<br />
+                            International Workshop on Software Health (SoHeal): 2021<br />
                             International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019
                             2018<br />
                         </p>
