--- a/publications.html
+++ b/publications.html
@@ -104,6 +104,10 @@
                     <ul class="fa-ul mb-0 small">
                         <li>
                             <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and
+                            Software, 2020
+                        </li>
+                        <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and
                             Software, 2019
                         </li>
                         <li>
