Update summary and awards

--- a/publications.html
+++ b/publications.html
@@ -103,12 +103,16 @@
                     <h5 class="card-title">Awards</h5>
                     <ul class="fa-ul mb-0 small">
                         <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and
-                            Software, 2020
+                            <i class="fa-li fa fa-trophy text-warning"></i> Distinguished Reviewer - ACM Transactions on
+                            Software Engineering and Methodologies, 2020
                         </li>
                         <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Journal of Systems and
-                            Software, 2019
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Elsevier Journal of
+                            Systems and Software, 2020
+                        </li>
+                        <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Elsevier Journal of
+                            Systems and Software, 2019
                         </li>
                         <li>
                             <i class="fa-li fa fa-trophy text-warning"></i> NSF travel support - Symposium on
