--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca"
                                 target="_blank">TOSCA technical committee</a> and co-lead the "Emerging Compute
                             Platforms ad-hoc", which focuses on adopting TOSCA as the Infrastructure-as-Code language
-                            for serverless applications. I am member-at-large of the <a
+                            for serverless applications. I am a member-at-large of the <a
                                 href="https://www.computer.org/volunteering/boards-and-committees/technical-activities"
                                 target="_blank">IEEE
                             Conference Activities Committee</a>.<br />
