Add serveral services

--- a/services.html
+++ b/services.html
@@ -94,6 +94,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
+                            <a target="blank">20th Belgium-Netherlands
+                                Software Evolution Workshop</a>: Organizer<br />
                             <a href="https://conf.researchr.org/home/icpc-2021" target="blank">29th International
                                 Conference on Program Comprehension</a>: Tool Demo Co-Chair<br />
                             <a href="https://soheal.github.io/" target="blank">3rd International Workshop on Software
@@ -119,8 +121,9 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
-                            Journal of Systems and Software - Elsevier: 2021 - Actual<br />
-                            Guest Editor for Science of Computer Programming - Elsevier for the <a
+                            Elsevier Science of Computer Programming: 2021 - Actual<br /> 
+                            Elsevier Journal of Systems and Software: 2021 - Actual<br />
+                            Guest Editor for Elsevier Science of Computer Programming for the <a
                                 href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-papers/special-issue-on-software-health-of-software-ecosystems"
                                 target="blank">special issue on "Software Health of Software Ecosystems"</a>: 2020 -
                             Actual<br />
@@ -136,6 +139,15 @@
                         <p class="card-text text-justify small">
                             IEEE/ACM International Conference on Software Engineering (ICSE):<br />
                             &emsp;2022 (Student Research Competition)<br />
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering
+                            (SANER):<br />
+                            &emsp;2022 (Research Track)<br />
+                            &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track, Tool Demo
+                            Track)<br />
+                            &emsp;2020 (Research Track, Journal First Track, Tool Demo Track)<br />
+                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):<br />
+                            &emsp;2021 (Research Track)<br />
+                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
                             &emsp;2021 (Tool Demo Track)<br />
                             &emsp;2019 (Tool Demo Track)<br />
@@ -145,14 +157,6 @@
                             &emsp;2021 (Technical Papers Track)<br />
                             &emsp;2019 (Student Research Competition)<br />
                             &emsp;2018 (Student Research Competition)<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering
-                            (SANER):<br />
-                            &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track, Tool Demo
-                            Track)<br />
-                            &emsp;2020 (Research Track, Journal First Track, Tool Demo Track)<br />
-                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):
-                            <br />
-                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
                             Software Engineering (ESEC/FSE):<br />
                             &emsp;2020 (Tool Demo Track)<br />
@@ -177,17 +181,14 @@
                         <h4 class="card-title">Reviewer for International Journals</h4>
                         <p class="card-text text-justify small">
                             Advances in Software Engineering - Elsevier<br />
-                            Computational Intelligence - Wiley<br />
                             Empirical Software Engineering - Springer<br />
                             IEEE Access - IEEE<br />
                             IET Software - Institution of Engineering and Technology<br />
-                            Information Processing Letters - Elsevier<br />
+                            Information and Software Technology - Elsevier<br />
                             Journal of Software: Evolution and Process - Wiley<br />
                             Journal of Systems and Software - Elsevier<br />
-                            Neurocomputing - Elsevier<br />
                             Science of Computer Programming - Elsevier<br />
                             Software Quality Journal - Springer<br />
-                            Transactions on Knowledge and Data Engineering - IEEE<br />
                             Transactions on Software Engineering - IEEE<br />
                             Transactions on Software Engineering and Methodology - ACM
                         </p>
@@ -216,13 +217,16 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
-                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical
-                            University Eindhoven, The Netherlands, December 10th, 2020<br />
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of Milano Bicocca, Virtual, July 7th, 2021<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
-                            Summer School on Internet of Things, University of Salerno, Fisciano, Italy, June 3rd
+                            Summer School on Internet of Things, University of Salerno, Virtual, April 9th, 2021<br />
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical
+                            University Eindhoven, Virtual, December 10th, 2020<br />
+                            Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
+                            Summer School on Internet of Things, University of Salerno, Virtual, June 3rd
                             2020<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
-                            Salerno, Fisciano, Italy, March 25th 2020<br />
+                            Salerno, Virtual, March 25th 2020<br />
                             Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
                             3rd 2019<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
