--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
-                            Elsevier Science of Computer Programming: 2021 - Actual<br /> 
+                            Elsevier Science of Computer Programming: 2021 - Actual<br />
                             Elsevier Journal of Systems and Software: 2021 - Actual<br />
                             Guest Editor for Elsevier Science of Computer Programming for the <a
                                 href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-papers/special-issue-on-software-health-of-software-ecosystems"
@@ -217,24 +217,24 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
-                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of Milano Bicocca, Virtual, July 7th, 2021<br />
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of
+                            Milano Bicocca, Virtual, July 7th, 2021<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
                             Summer School on Internet of Things, University of Salerno, Virtual, April 9th, 2021<br />
                             Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical
                             University Eindhoven, Virtual, December 10th, 2020<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
-                            Summer School on Internet of Things, University of Salerno, Virtual, June 3rd
-                            2020<br />
+                            Summer School on Internet of Things, University of Salerno, Virtual, June 3rd, 2020<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
-                            Salerno, Virtual, March 25th 2020<br />
+                            Salerno, Virtual, March 25th, 2020<br />
                             Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
-                            3rd 2019<br />
+                            3rd, 2019<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
-                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th 2018<br />
+                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th, 2018<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
-                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th 2017<br />
+                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th, 2017<br />
                             Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels,
-                            Belgium, March 23rd 2017
+                            Belgium, March 23rd, 2017
                         </p>
                     </div>
                 </div>
