Add a couple of new services

--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
-                            <a target="blank">20th Belgium-Netherlands
+                            <a href="https://benevol2021.github.io/" target="blank">20th Belgium-Netherlands
                                 Software Evolution Workshop</a>: Organizer<br />
                             <a href="https://conf.researchr.org/home/icpc-2021" target="blank">29th International
                                 Conference on Program Comprehension</a>: Tool Demo Co-Chair<br />
@@ -139,6 +139,9 @@
                         <p class="card-text text-justify small">
                             IEEE/ACM International Conference on Software Engineering (ICSE):<br />
                             &emsp;2022 (Student Research Competition)<br />
+                            IEEE International Conference on Program Comprehension (ICPC):<br />
+                            &emsp;2022 (Research Track)<br />
+                            &emsp;2020 (Research Track)<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER):<br />
                             &emsp;2022 (Research Track)<br />
@@ -163,8 +166,6 @@
                             &emsp;2019 (Artifact Evaluation Track)<br />
                             IEEE/ACM International Conference on Automated Software Engineering (ASE):<br />
                             &emsp;2020 (Late Breaking Results Track)<br />
-                            IEEE International Conference on Program Comprehension (ICPC):<br />
-                            &emsp;2020 (Research Track)<br />
                             Euromicro Conference on Software Engineering and Advanced Applications (SEAA):<br />
                             &emsp;2020 (Journal First Track)<br />
                             International Workshop on Machine Learning Techniques for Software Quality Evaluation
