Add a new data engineering edition. Clean up the teaching page.

--- a/teaching.html
+++ b/teaching.html
@@ -106,26 +106,37 @@
                                 <tr>
                                     <td>Introduction to Machine Learning</td>
                                     <td>Pre-MSc</td>
-                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University Eindhoven)</td>
+                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
+                                        Eindhoven)</td>
                                     <td>Spring 2021 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank"> Prof. D.A. Tamburri</a>)<br/>Spring 2020 (co-lectured with <a
-                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank"> Prof. D.A. Tamburri</a>)</td>
+                                            target="blank">D.A. Tamburri</a>)<br />Spring 2020 (co-lectured with
+                                        <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank">D.A. Tamburri</a>)
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>Data Engineerng</td>
                                     <td>MSc</td>
-                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University Eindhoven)</td>
-                                    <td>Fall 2020 (co-lectured with <a
+                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
+                                        Eindhoven)</td>
+                                    <td>Fall 2021 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank"> Prof. D.A. Tamburri</a>, <a
+                                            target="blank"> D.A. Tamburri</a>, <a
                                             href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> Prof. W.J. van den Heuvel</a>, <a
+                                            target="blank"> W.J. van den Heuvel</a>, <a
                                             href="https://scholar.google.it/citations?user=IfiRc9MAAAAJ&hl=en"
-                                            target="blank"> Dr. I. Kumara</a>,<a
-                                            href="https://www.linkedin.com/in/ekhtiar/"
-                                            target="blank"> E. Syed</a>)</td>
+                                            target="blank"> I. Kumara</a>,<a href="https://www.linkedin.com/in/ekhtiar/"
+                                            target="blank"> E. Syed</a>)
+                                        <br />Fall 2020 (co-lectured with <a
+                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank"> D.A. Tamburri</a>, <a
+                                            href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
+                                            target="blank"> W.J. van den Heuvel</a>, <a
+                                            href="https://scholar.google.it/citations?user=IfiRc9MAAAAJ&hl=en"
+                                            target="blank"> I. Kumara</a>,<a href="https://www.linkedin.com/in/ekhtiar/"
+                                            target="blank"> E. Syed</a>)
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>Data Statistics</td>
@@ -133,17 +144,17 @@
                                     <td>Tilburg University, Technical University Eindhoven</td>
                                     <td>Fall 2019 (co-lectured with <a
                                             href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
-                                            target="blank"> Prof. M.C. Kaptein</a>)</td>
+                                            target="blank"> M.C. Kaptein</a>)</td>
                                 </tr>
                                 <tr>
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
                                     <td>2019/20 (yearly course, co-lectured with <a
-                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof.
-                                            C. De Roover</a>) <br /> 2018/19 (yearly course, co-lectured with <a
-                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof.
-                                            C. De Roover</a>)</td>
+                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De Roover</a>)
+                                        <br /> 2018/19 (yearly course, co-lectured with <a
+                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De Roover</a>)
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -169,18 +180,18 @@
                                     <td>Software Engineering, Management and Evolution</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">Prof. A. De Lucia</a>)<br /> Spring 2016 (<a
-                                            href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De
+                                    <td>Spring 2017 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">A.
+                                            De Lucia</a>)<br /> Spring 2016 (<a
+                                            href="https://docenti.unisa.it/003241/en/home" target="blank">A. De
                                             Lucia</a>)</td>
                                 </tr>
                                 <tr>
                                     <td>Software Engineering</td>
                                     <td>BSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2016 (<a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">Prof. A. De Lucia</a>)<br /> Fall 2015 (<a
-                                            href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. A. De
+                                    <td>Fall 2016 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">A.
+                                            De Lucia</a>)<br /> Fall 2015 (<a
+                                            href="https://docenti.unisa.it/003241/en/home" target="blank">A. De
                                             Lucia</a>)</td>
                                 </tr>
                                 <tr>
@@ -193,17 +204,17 @@
                                     <td>Programming I</td>
                                     <td>BSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2016 (<a href="https://docenti.unisa.it/004532/en/home"
-                                            target="blank">Prof. R. Distasi</a>)<br /> Fall 2015 (<a
-                                            href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. E.
+                                    <td>Fall 2016 (<a href="https://docenti.unisa.it/004532/en/home" target="blank">R.
+                                            Distasi</a>)<br /> Fall 2015 (<a
+                                            href="https://docenti.unisa.it/000263/en/curriculum" target="blank">E.
                                             Fischetti</a>)</td>
                                 </tr>
                                 <tr>
                                     <td>Software Engineering: Maintenance and Testing</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">Prof. A. De Lucia</a>)</td>
+                                    <td>Fall 2015 (<a href="https://docenti.unisa.it/003241/en/home" target="blank">A.
+                                            De Lucia</a>)</td>
                                 </tr>
                             </tbody>
                         </table>
